--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -1,7 +1,9 @@
 @import '../abstract/variaveis';
 
 .formulario {
-    display: grid;
+    display: flex;
+    justify-content: space-around;
+    margin: 0 0 0 4%;
 }
 .formulario__pesquisar {
     border: 1px solid $color_border;
