--- a/src/sass/detalhes.css
+++ b/src/sass/detalhes.css
@@ -164,27 +164,30 @@ a:hover,
 }
 
 .formulario {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  margin: 0 0 0 4%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr auto;
+      grid-template-columns: 1fr auto;
+  gap: 2rem;
+  margin: 2% 0 0 4%;
+}
+
+@media screen and (max-width: 576px) {
+  .formulario {
+    gap: 0rem;
+  }
 }
 
 .formulario__pesquisar {
   border: 1px solid #C4C4C4;
-  font-size: 2.5em;
-  height: 128%;
-  margin: 1% 0 0 4%;
-  top: 40%;
-  width: 85%;
+  margin-right: 8px;
+  width: 85vw;
 }
 
 @media screen and (max-width: 576px) {
   .formulario__pesquisar {
     height: 8vh;
-    width: 70%;
+    width: 78vw;
     font-size: 2.3em;
   }
 }
@@ -192,7 +195,7 @@ a:hover,
 @media screen and (min-width: 577px) and (max-width: 768px) {
   .formulario__pesquisar {
     height: 8vh;
-    width: 80%;
+    width: 78vw;
   }
 }
 
@@ -200,9 +203,7 @@ a:hover,
   border: 1px solid #C4C4C4;
   border-radius: 1vh;
   background: #000000;
-  height: 130%;
-  margin: -1.6% 0 0 91%;
-  width: 6%;
+  width: 7vw;
 }
 
 .formulario__botao__pesquisa svg {
@@ -216,8 +217,6 @@ a:hover,
 @media screen and (max-width: 576px) {
   .formulario__botao__pesquisa {
     height: 8vh;
-    margin: 0 0 0 75%;
-    margin-top: -10%;
     width: 15vw;
   }
 }
@@ -225,8 +224,6 @@ a:hover,
 @media screen and (min-width: 577px) and (max-width: 768px) {
   .formulario__botao__pesquisa {
     height: 8vh;
-    margin: 0 0 0 85%;
-    margin-top: -8%;
     width: 13vw;
   }
 }
@@ -256,7 +253,7 @@ a:hover,
 
 .detalhes__produto__imagem {
   border: 1px solid #C4C4C4;
-  height: 79vh;
+  height: 96vh;
   width: 37vw;
   margin: 0%;
 }
@@ -360,7 +357,6 @@ a:hover,
   -ms-grid-column: 1;
   grid-column: 1;
   margin: 1%;
-  top: 10vw;
   width: 2.3vw;
 }
 
@@ -375,6 +371,12 @@ a:hover,
   .imagem__botao .imagem__botao__tamanho {
     height: 5vh;
     width: 5vw;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 992px) {
+  .imagem__botao .imagem__botao__tamanho {
+    width: 3.3vw;
   }
 }
 
@@ -409,6 +411,19 @@ a:hover,
   }
 }
 
+@media screen and (min-width: 769px) and (max-width: 992px) {
+  .botao__compra {
+    height: 8vh;
+    line-height: 8vh;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 992px) {
+  .botao__compra {
+    width: 24vw;
+  }
+}
+
 .botao__iamgem__svg {
   place-self: end;
   margin-top: 3%;
@@ -431,13 +446,19 @@ a:hover,
 
 @media screen and (max-width: 576px) {
   .banner {
-    height: 26vw;
+    height: 26vh;
   }
 }
 
 @media screen and (min-width: 577px) and (max-width: 768px) {
   .banner {
-    height: 26vw;
+    height: 26vh;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 992px) {
+  .banner {
+    height: 26vh;
   }
 }
 
@@ -456,14 +477,12 @@ a:hover,
 @media screen and (max-width: 576px) {
   .banner__conteudo__texto, .banner__conteudo__titulo {
     font-size: 2em;
-    margin: 8% 0 0 0;
   }
 }
 
 @media screen and (min-width: 577px) and (max-width: 768px) {
   .banner__conteudo__texto, .banner__conteudo__titulo {
     font-size: 2.5em;
-    margin: 10% 0 0 0;
   }
 }
 
@@ -482,14 +501,12 @@ a:hover,
 @media screen and (max-width: 576px) {
   .banner__conteudo__titulo {
     font-size: 2.2rem;
-    margin: .3% 0 0 0;
   }
 }
 
 @media screen and (min-width: 577px) and (max-width: 768px) {
   .banner__conteudo__titulo {
     font-size: 2.5rem;
-    margin: .3% 0 0 0;
   }
 }
 
@@ -513,7 +530,7 @@ a:hover,
   .banner__logo .logo__titulo {
     font-size: 2.2rem;
     line-height: 1.6vh;
-    margin: 21% 0 0 0;
+    margin: 20% 0 0 0;
   }
 }
 
@@ -521,7 +538,13 @@ a:hover,
   .banner__logo .logo__titulo {
     font-size: 2.5rem;
     line-height: 1.6vh;
-    margin: 23% 0 0 0;
+    margin: 14% 0 0 0;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 992px) {
+  .banner__logo .logo__titulo {
+    margin: 13% 0 0 0;
   }
 }
 
@@ -545,7 +568,7 @@ a:hover,
   font-size: 2.1rem;
   font-weight: bold;
   font-style: normal;
-  line-height: 2%;
+  line-height: 4vh;
 }
 
 @media screen and (max-width: 576px) {
@@ -569,6 +592,7 @@ a:hover,
   .sugestao__compra__conteudo {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
+    justify-items: center;
   }
 }
 
@@ -576,6 +600,12 @@ a:hover,
   .sugestao__compra__conteudo {
     -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 992px) {
+  .sugestao__compra__conteudo {
+    gap: 5em;
   }
 }
 
@@ -602,23 +632,54 @@ a:hover,
 
 @media screen and (max-width: 576px) {
   .sugestao__compra__imagem__borda {
-    height: 45vh;
+    height: 50vh;
     margin: 0%;
-    width: 47vw;
+    width: 40vw;
   }
 }
 
 @media screen and (min-width: 577px) and (max-width: 768px) {
   .sugestao__compra__imagem__borda {
-    height: 45vh;
-    width: 36vw;
+    height: 50vh;
+    width: 30vw;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 992px) {
+  .sugestao__compra__imagem__borda {
+    height: 43vh;
+    width: 20vw;
   }
 }
 
 .sugestao__compra__imagem__tamanhos {
-  height: 220px;
+  height: 35vh;
   margin: 2%;
-  width: 220px;
+  width: 16vw;
+}
+
+@media screen and (max-width: 576px) {
+  .sugestao__compra__imagem__tamanhos {
+    height: 42vh;
+    margin: 2%;
+    width: 38vw;
+  }
+}
+
+@media screen and (min-width: 577px) and (max-width: 768px) {
+  .sugestao__compra__imagem__tamanhos {
+    height: 42vh;
+    margin: 2%;
+    width: 28vw;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 992px) {
+  .sugestao__compra__imagem__tamanhos {
+    height: 36vh;
+    margin: 2%;
+    width: 19vw;
+  }
 }
 
 .sugestao__compra__imagem__botao {
@@ -658,6 +719,14 @@ a:hover,
   }
 }
 
+@media screen and (min-width: 769px) and (max-width: 992px) {
+  .sugestao__compra__imagem__botao__tamanho {
+    height: 5vh;
+    margin: 1%;
+    width: 3vw;
+  }
+}
+
 .sugestao__compra__texto {
   font-weight: 400;
   font-size: 2.9em;
@@ -673,7 +742,6 @@ a:hover,
   line-height: 0%;
   text-align: start;
   width: 100%;
-  margin-top: -9%;
 }
 
 @media screen and (max-width: 576px) {
@@ -703,7 +771,7 @@ a:hover,
   font-size: 1.7rem;
   height: 3vw;
   line-height: 6vh;
-  width: 100%;
+  width: 17vw;
 }
 
 @media screen and (max-width: 576px) {
@@ -717,6 +785,31 @@ a:hover,
   .sugestao__compra__botao__sacola {
     height: 8vh;
     line-height: 8vh;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 992px) {
+  .sugestao__compra__botao__sacola {
+    height: 8vh;
+    line-height: 8vh;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .sugestao__compra__botao__sacola {
+    width: 40vw;
+  }
+}
+
+@media screen and (min-width: 577px) and (max-width: 768px) {
+  .sugestao__compra__botao__sacola {
+    width: 31vw;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 992px) {
+  .sugestao__compra__botao__sacola {
+    width: 20vw;
   }
 }
 
