--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,4 +1,5 @@
-@import '/src/sass/abstract/base';
+@import './abstract/base';
+@import './abstract/variaveis';
 @import './components/header';
 @import './components/navbar';
 @import './components/form';
