--- a/src/sass/components/_banner.scss
+++ b/src/sass/components/_banner.scss
@@ -9,10 +9,13 @@
     margin: 1% 0 0 4%;
     width: 90%;
     @media screen and (max-width: 576px){
-        height: 26vw;
+        height: 26vh;
     }
     @media screen and (min-width: 577px) and (max-width: 768px){
-        height: 26vw;
+        height: 26vh;
+    }
+    @media screen and (min-width: 769px) and (max-width: 992px){
+        height: 26vh;
     }
 }
 .banner__conteudo{
@@ -26,11 +29,9 @@
     margin: 5% 0 0 0;
     @media screen and (max-width: 576px){
         font-size: 2em;
-        margin: 8% 0 0 0;
     }
     @media screen and (min-width: 577px) and (max-width: 768px){
         font-size: 2.5em;
-        margin: 10% 0 0 0;
     }
 }
 .banner__conteudo__titulo{
@@ -42,11 +43,9 @@
     @extend .banner__conteudo__texto;
     @media screen and (max-width: 576px){
         font-size: 2.2rem;
-        margin: .3% 0 0 0;
     }
     @media screen and (min-width: 577px) and (max-width: 768px){
         font-size: 2.5rem;
-        margin: .3% 0 0 0;
     }
 }
 
@@ -64,12 +63,15 @@
         @media screen and (max-width: 576px){
             font-size: 2.2rem;
             line-height: 1.6vh;
-            margin: 21% 0 0 0;
+            margin: 20% 0 0 0;
         }
         @media screen and (min-width: 577px) and (max-width: 768px){
             font-size: 2.5rem;
             line-height: 1.6vh;
-            margin: 23% 0 0 0;
+            margin: 14% 0 0 0;
+        }
+        @media screen and (min-width: 769px) and (max-width: 992px){
+            margin: 13% 0 0 0;
         }
     }
     .logo__texto{
