--- a/src/sass/components/_sugestao_compra.scss
+++ b/src/sass/components/_sugestao_compra.scss
@@ -9,7 +9,7 @@
     font-size: 2.1rem;
     font-weight: bold;
     font-style: normal;
-    line-height: 2%;
+    line-height: 4vh;
     @media screen and (max-width: 576px){
         font-size: 1.8rem;
         text-align: center;
@@ -23,9 +23,13 @@
     max-width: 95%;
     @media screen and (max-width: 576px){
         grid-template-columns: 1fr;
+        justify-items: center;
     }
     @media screen and (min-width: 577px) and (max-width: 768px){
         grid-template-columns: repeat(2, 1fr);
+    }
+    @media screen and (min-width: 769px) and (max-width: 992px){
+        gap: 5em;
     }
 }
 .sugestao__compra__imagem {
@@ -42,19 +46,38 @@
     margin: 0%;
     width: 17vw;
     @media screen and (max-width: 576px){
-        height: 45vh;
+        height: 50vh;
         margin: 0%;
-        width: 47vw;
+        width: 40vw;
     }
     @media screen and (min-width: 577px) and (max-width: 768px){
-        height: 45vh;
-        width: 36vw;
+        height: 50vh;
+        width: 30vw;
+    }
+    @media screen and (min-width: 769px) and (max-width: 992px){
+        height: 43vh;
+        width: 20vw;
     }
 }
 .sugestao__compra__imagem__tamanhos {
-    height: 220px;
+    height: 35vh;
     margin: 2%;
-    width: 220px;
+    width: 16vw;
+    @media screen and (max-width: 576px){
+        height: 42vh;
+        margin: 2%;
+        width: 38vw;
+    }
+    @media screen and (min-width: 577px) and (max-width: 768px){
+        height: 42vh;
+        margin: 2%;
+        width: 28vw;
+    }
+    @media screen and (min-width: 769px) and (max-width: 992px){
+        height: 36vh;
+        margin: 2%;
+        width: 19vw;
+    }
 }
 .sugestao__compra__imagem__botao {
     align-items: center;
@@ -76,6 +99,11 @@
         height: 5vh;
         width: 5vw;
     }
+    @media screen and (min-width: 769px) and (max-width: 992px){
+        height: 5vh;
+        margin: 1%;
+        width: 3vw;
+    }
 }
 .sugestao__compra__texto {    
     font-weight: 400;
@@ -91,7 +119,6 @@
     line-height: 0%;
     text-align: start;
     width: 100%;
-    margin-top: -9%;
     @media screen and (max-width: 576px){
         text-align: center;
         margin-top: 0%;
@@ -102,7 +129,16 @@
 }
 .sugestao__compra__botao__sacola {
     @include button__sacola;
-    width: 100%;
+    width: 17vw;
+    @media screen and (max-width: 576px){
+        width: 40vw;
+    }
+    @media screen and (min-width: 577px) and (max-width: 768px){
+        width: 31vw;
+    }
+    @media screen and (min-width: 769px) and (max-width: 992px){
+        width: 20vw;
+    }
 }
 .sugestao__compra__botao__svg {
     @include button__svg__sacola;
