--- a/src/sass/carrinho.css
+++ b/src/sass/carrinho.css
@@ -327,18 +327,34 @@ a:hover,
   }
 }
 
+.minha__sacola__imagem__botao__input {
+  cursor: pointer;
+}
+
 .minha__sacola__botao__tamanho {
-  width: 15%;
-  height: 5vh;
+  display: none;
+}
+
+.minha__sacola__botao__span {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 1.6rem;
+  height: 3rem;
+  margin-right: 1rem;
+  width: 3rem;
   border: 1px solid #C4C4C4;
   border-radius: 15%;
 }
 
-@media screen and (max-width: 576px) {
-  .minha__sacola__botao__tamanho {
-    height: 8vh;
-    width: 8vw;
-  }
+.minha__sacola__botao__span:active {
+  color: black;
 }
 
 .minha__sacola__produto__preco {
