--- a/src/sass/components/_produto_lista.scss
+++ b/src/sass/components/_produto_lista.scss
@@ -26,6 +26,9 @@
     @media screen and (min-width: 577px) and (max-width: 768px){
         grid-template-columns: repeat(2, 1fr);
     }
+    @media screen and (min-width: 769px) and (max-width: 992px){
+        gap: 5em;
+    }
 }
 .produto__lista__imagem {
     flex: 1 1 2%;
@@ -37,23 +40,43 @@
     @include border__img;
 
     display: grid;
-    height: 42vh;
+    height: 56vh;
     margin: 0%;
     width: 17vw;
     @media screen and (max-width: 576px){
-        height: 45vh;
-        width: 47vw;
+        height: 50vh;
+        margin: 0%;
+        width: 40vw;
     }
     @media screen and (min-width: 577px) and (max-width: 768px){
-        height: 45vh;
-        width: 36vw;
+        height: 50vh;
+        width: 30vw;
+    }
+    @media screen and (min-width: 769px) and (max-width: 992px){
+        height: 43vh;
+        width: 20vw;
     }
     
 }
 .produto__lista__imagem__tamanhos {
-    height: 220px;
+    height: 45vh;
     margin: 2%;
-    width: 220px;
+    width: 16vw;
+    @media screen and (max-width: 576px){
+        height: 42vh;
+        margin: 2%;
+        width: 38vw;
+    }
+    @media screen and (min-width: 577px) and (max-width: 768px){
+        height: 42vh;
+        margin: 2%;
+        width: 28vw;
+    }
+    @media screen and (min-width: 769px) and (max-width: 992px){
+        height: 36vh;
+        margin: 2%;
+        width: 19vw;
+    }
 }
 .produto__lista__imagem__botao {
     align-items: center;
@@ -64,7 +87,7 @@
 .produto__lista__imagem__botao__tamanho {
     @include border__tamanho;
     grid-column: 1;
-    height: 4vh;
+    height: 7vh;
     margin: 1%;
     width: 2vw;
     @media screen and (max-width: 576px){
@@ -74,6 +97,11 @@
     @media screen and (min-width: 577px) and (max-width: 768px){
         height: 5vh;
         width: 5vw;
+    }
+    @media screen and (min-width: 769px) and (max-width: 992px){
+        height: 5vh;
+        margin: 1%;
+        width: 3vw;
     }
 }
 .produto__lista__texto {    
@@ -90,15 +118,38 @@
     line-height: 0%;
     text-align: start;
     width: 100%;
-    margin-top: 0%;
     @media screen and (max-width: 576px){
         text-align: center;
+    }
+    @media screen and (min-width: 577px) and (max-width: 768px){
+        margin-top: 40%;
     }
 }
 .produto__lista__botao__sacola {
     @include button__sacola;
-    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    width: 17vw;
+    @media screen and (max-width: 576px){
+        height: 8vh;
+        line-height: 8vh;
+        width: 40vw;
+    }
+    @media screen and (min-width: 577px) and (max-width: 768px){
+        width: 31vw;
+    }
+    @media screen and (min-width: 769px) and (max-width: 992px){
+        width: 20vw;
+    }
 }
 .produto__lista__botao__svg {
     @include button__svg__sacola;
+    @media screen and (max-width: 576px){
+        align-self: normal;
+        margin-top: 0%;
+    }
+    @media screen and (min-width: 577px) and (max-width: 768px){
+        align-self: normal;
+        margin-top: 0%;
+    }
 }
